--- a/alappuzha.html
+++ b/alappuzha.html
@@ -20,11 +20,11 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" href="districts.html">Where to go</a>
-              <a class="nav-link" href="explore.html">Explore</a>
-              <a class="nav-link" href="#">Plan your trip</a>
-              <a class="nav-link" href="faq.html">FAQ</a>
-              <a class="nav-link" href="updates.html">Updates</a>
+              <a class="nav-link active" href="./districts.html">Where to go</a>
+              <a class="nav-link" href="./explore.html">Explore</a>
+              <a class="nav-link" href="./plan-to-go.html">Plan your trip</a>
+              <a class="nav-link" href="./faq.html">FAQ</a>
+              <a class="nav-link" href="./updates.html">Updates</a>
             </div>
           </div>
         </div>
