--- a/plan-to-go.html
+++ b/plan-to-go.html
@@ -104,6 +104,16 @@
           </div>
      </div>
     <!-- /main -->
+
+    <!-- footer -->
+    <footer>
+      <div class="footer-other-main set-to-bottom">
+        <div class="mb-3">
+          <span>All rights reserved © machine-56</span>
+        </div>
+      </div>
+     </footer>
+    <!-- /footer -->
   </body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
