--- a/index.html
+++ b/index.html
@@ -246,9 +246,11 @@
        <div class=" text-center explore-main">
         <div class="title">
           <h2 id="t-black">Explore more</h2>
-          <button class="btn-cstm">
-            <i class="fa-solid fa-angle-right"></i>
-          </button>
+          <a href="./explore.html">
+            <button class="btn-cstm">
+              <i class="fa-solid fa-angle-right"></i>
+            </button>
+          </a>
         </div>
       </div>
       <!-- /Explore -->
