--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
         </div>
 
          <div class="container cul-main">
-          <div class="row">
-            <div class="col">
+          <div class="row row-cols-2 row-cols-lg-3 g-2 g-lg-3">
+            <div class="col img-col">
               <div class="img-div shadow-med">
                 <img src="./images/grid-image-1.png" alt="image" class="cul-img">
                 <div class="cul-txt-div">
@@ -132,7 +132,7 @@
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col img-col">
               <div class="img-div">
                 <img src="./images/grid-image-2.png" alt="image" class="cul-img">
                 <div class="cul-txt-div">
@@ -143,7 +143,7 @@
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col img-col">
               <div class="img-div">
                 <img src="./images/grid-image-3.png" alt="image" class="cul-img">
                 <div class="cul-txt-div">
