--- a/districts.html
+++ b/districts.html
@@ -39,10 +39,10 @@
          
          <!--  -->
         <div class="container text-center">
-            <div class="row row-cols-2 row-cols-lg-3 g-2 g-lg-3">
+            <div class="row row-cols-1 row-cols-lg-3 g-2 g-lg-3">
               <div class="col">
                 <div class="p-3">
-                    <div class="card">
+                    <div class="card-main">
                         <a href="thiruvananthapuram.html">
                             <img src="./images/thiruvanathapuram.png" class="card-img-top" alt="image">
                             <h5>Thiruvananthapuram</h5>
@@ -52,7 +52,7 @@
               </div>
               <div class="col">
                 <div class="p-3">
-                    <div class="card">
+                    <div class="card-main">
                         <a href="kollam.html">
                             <img src="./images/kollam.png" class="card-img-top" alt="image">
                             <h5>Kollam</h5>
@@ -62,7 +62,7 @@
               </div>
               <div class="col">
                 <div class="p-3">
-                    <div class="card">
+                    <div class="card-main">
                         <a href="pathanamthitta.html">
                             <img src="./images/pathanamthitta.png" class="card-img-top" alt="image">
                             <h5>Pathanamthitta</h5>
@@ -72,7 +72,7 @@
               </div>
               <div class="col">
                 <div class="p-3">
-                    <div class="card">
+                    <div class="card-main">
                         <a href="alappuzha.html">
                             <img src="./images/alappuzha.png" class="card-img-top" alt="image">
                             <h5>Alappuzha</h5>
@@ -82,7 +82,7 @@
               </div>
               <div class="col">
                 <div class="p-3">
-                    <div class="card">
+                    <div class="card-main">
                         <a href="kottayam.html">
                             <img src="./images/kottayam.png" class="card-img-top" alt="image">
                             <h5>Kottayam</h5>
@@ -92,7 +92,7 @@
               </div>
               <div class="col">
                 <div class="p-3">
-                    <div class="card">
+                    <div class="card-main">
                         <a href="#">
                             <img src="./images/idukki.png" class="card-img-top" alt="image">
                             <h5>Idukki</h5>
@@ -102,7 +102,7 @@
               </div>
               <div class="col">
                 <div class="p-3">
-                    <div class="card">
+                    <div class="card-main">
                         <a href="#">
                             <img src="./images/ernakulam.png" class="card-img-top" alt="image">
                             <h5>Eranakulam</h5>
@@ -112,7 +112,7 @@
               </div>
               <div class="col">
                 <div class="p-3">
-                    <div class="card">
+                    <div class="card-main">
                         <a href="#">
                             <img src="./images/thrissur.png" class="card-img-top" alt="image">
                             <h5>Thrissur</h5>
@@ -122,7 +122,7 @@
               </div>
               <div class="col">
                 <div class="p-3">
-                    <div class="card">
+                    <div class="card-main">
                         <a href="#">
                             <img src="./images/palakkad.png" class="card-img-top" alt="image">
                             <h5>Palakkad</h5>
@@ -132,7 +132,7 @@
               </div>
               <div class="col">
                 <div class="p-3">
-                    <div class="card">
+                    <div class="card-main">
                         <a href="#">
                             <img src="./images/malappuram.png" class="card-img-top" alt="image">
                             <h5>Malappuram</h5>
@@ -142,7 +142,7 @@
               </div>
               <div class="col">
                 <div class="p-3">
-                    <div class="card">
+                    <div class="card-main">
                         <a href="#">
                             <img src="./images/kozhikodu.png" class="card-img-top" alt="image">
                             <h5>Kozhikodu</h5>
@@ -152,7 +152,7 @@
               </div>
               <div class="col">
                 <div class="p-3">
-                    <div class="card">
+                    <div class="card-main">
                         <a href="#">
                             <img src="./images/wayanadu.png" class="card-img-top" alt="image">
                             <h5>Wayanadu</h5>
@@ -162,7 +162,7 @@
               </div>
               <div class="col">
                 <div class="p-3">
-                    <div class="card">
+                    <div class="card-main">
                         <a href="#">
                             <img src="./images/kannur.png" class="card-img-top" alt="image">
                             <h5>Kannur</h5>
@@ -172,7 +172,7 @@
               </div>
               <div class="col">
                 <div class="p-3">
-                    <div class="card">
+                    <div class="card-main">
                         <a href="#">
                             <img src="./images/kasaragod.png" class="card-img-top" alt="image">
                             <h5>Kasargod</h5>
